[package]
name = "onemoney-protocol"
version = "0.5.0"
edition = "2024"
description = "Official Rust SDK for OneMoney Protocol - L1 blockchain network client"
license = "Apache-2.0"
authors = ["OneMoney Team"]
repository = "https://github.com/1Money-Co/onemoney-protocol"
documentation = "https://docs.rs/onemoney-protocol"
homepage = "https://1money.network"
readme = "README.md"
keywords = ["blockchain", "crypto", "protocol", "sdk", "onemoney"]
categories = ["api-bindings", "cryptography", "web-programming::http-client"]
rust-version = "1.87"
exclude = [
    "target/*",
    ".git/*",
    ".github/*",
    "API_ANALYSIS.md"
]

autoexamples = false

[[example]]
name = "accounts_example"
path = "examples/accounts_example.rs"

[[example]]
name = "chains_example"
path = "examples/chains_example.rs"

[[example]]
name = "checkpoints_example"
path = "examples/checkpoints_example.rs"

[[example]]
name = "network_examples"
path = "examples/network_examples.rs"

[[example]]
name = "states_example"
path = "examples/states_example.rs"

[[example]]
name = "tokens_example"
path = "examples/tokens_example.rs"

[[example]]
name = "transactions_example"
path = "examples/transactions_example.rs"





[lib]
name = "onemoney_protocol"
path = "src/lib.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Cryptography and blockchain
alloy-primitives = { version = "1.3", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdsa", "sha2"] }
rlp = "0.5.2"
sha3 = "0.10"

# Utilities
hex = "0.4"
url = "2.4"
uuid = { version = "1.18", features = ["v4"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
uuid = ["dep:uuid"]
integration = []
